@@ -3117,6 +3117,13 @@ This is the address that will be used as remitent for all the monthly report ema
 Default value: \fInoreply@example.com\fP
 .RE
 .P
+.BI subject_prefix
+.RS
+This is a string that will be prefixed in the Subject of all emails that will be sent.
+.P
+Default value: \fIMonitorix:\fP
+.RE
+.P
 .BI hour
 .RS
 This is the hour (in 24h format) when the email reports will be sent.
